Reorganized code structure and changed compile settings in tasks.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,10 +7,12 @@
             "command": "/usr/bin/g++",
             "args": [
                 "-g",
-                "${file}",
+                "${workspaceFolder}/Source_Files/*.cpp",
+                //"${workspaceFolder}/*.cpp",
+                //"${file}",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}",
-                "-IC:/Users/David Wang/vs_code_repos/libs/SFML-2.5.1/include/SFML",
+                "${workspaceFolder}/Hex_Grid",
+                "-IsC:/Users/David Wang/vs_code_repos/libs/SFML-2.5.1/include/SFML",
                 "-LC:/Users/David Wang/vs_code_repos/libs/SFML-2.5.1/lib",
                 "-lsfml-graphics",
                 "-lsfml-window",
